Fix spinner position. Update title spacing. Don't show spinner when checking power.

--- a/ui/src/app/base/components/TableMenu/TableMenu.scss
+++ b/ui/src/app/base/components/TableMenu/TableMenu.scss
@@ -1,6 +1,8 @@
 @import "~vanilla-framework/scss/settings_colors";
 @import "~vanilla-framework/scss/settings_spacing";
 
+$icon-size: map-get($icon-sizes, default);
+
 .p-table-menu .p-contextual-menu__non-interactive {
   border-bottom: 1px solid $color-mid-light;
   color: $color-mid-dark;
@@ -8,6 +10,10 @@
   font-weight: 400;
   padding: $spv-inner--x-small $sph-inner--small;
   text-transform: uppercase;
+}
+
+.p-table-menu--hasIcon .p-contextual-menu__non-interactive {
+  padding-left: $icon-size + ($sph-inner--small * 2);
 }
 
 .p-table-menu .p-contextual-menu__dropdown {
@@ -18,7 +24,6 @@
 }
 
 .p-table-menu__toggle {
-  $icon-size: map-get($icon-sizes, default);
   line-height: $icon-size;
   padding: 0 $icon-size / 2;
 }
